After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712654 - dav backend doesn't expose G_FILE_ATTRIBUTE_FILESYSTEM_USED
dav backend doesn't expose G_FILE_ATTRIBUTE_FILESYSTEM_USED
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: webdav backend
git master
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-19 08:39 UTC by Ross Lagerwall
Modified: 2013-11-30 13:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dav: Report number of bytes used on the filesystem (1.48 KB, patch)
2013-11-19 08:42 UTC, Ross Lagerwall
accepted-commit_now Details | Review

Description Ross Lagerwall 2013-11-19 08:39:08 UTC
dav backend doesn't expose G_FILE_ATTRIBUTE_FILESYSTEM_USED when it has both SIZE and FREE.
Comment 1 Ross Lagerwall 2013-11-19 08:42:26 UTC
Created attachment 260201 [details] [review]
dav: Report number of bytes used on the filesystem

Report the number of bytes used by exposing the "quota-used-bytes"
property.
Comment 2 Ondrej Holy 2013-11-21 12:17:16 UTC
Review of attachment 260201 [details] [review]:

Looks good!
Comment 3 Ross Lagerwall 2013-11-30 13:58:47 UTC
Pushed to master as 304ea0b47d80018ec49712677f5090feeb7a8c24. Thanks!