dav: Report number of bytes used on the filesystem

Report the number of bytes used by exposing the "quota-used-bytes"
property.

https://bugzilla.gnome.org/show_bug.cgi?id=712654